--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -5,6 +5,7 @@ if(MSVC)
 endif()
 
 add_library(math SHARED
+  hook_math.c
   ../src/hook_array.c
   ../src/hook_builtin.c
   ../src/hook_callable.c
@@ -14,7 +15,6 @@ add_library(math SHARED
   ../src/hook_error.c
   ../src/hook_iterable.c
   ../src/hook_iterator.c
-  hook_math.c
   ../src/hook_memory.c
   ../src/hook_module.c
   ../src/hook_range.c
@@ -27,6 +27,7 @@ add_library(math SHARED
   ../src/hook_vm.c)
 
 add_library(os SHARED
+  hook_os.c
   ../src/hook_array.c
   ../src/hook_builtin.c
   ../src/hook_callable.c
@@ -38,7 +39,6 @@ add_library(os SHARED
   ../src/hook_iterator.c
   ../src/hook_memory.c
   ../src/hook_module.c
-  hook_os.c
   ../src/hook_range.c
   ../src/hook_scanner.c
   ../src/hook_string_map.c
@@ -49,6 +49,7 @@ add_library(os SHARED
   ../src/hook_vm.c)
 
 add_library(io SHARED
+  hook_io.c
   ../src/hook_array.c
   ../src/hook_builtin.c
   ../src/hook_callable.c
@@ -56,7 +57,6 @@ add_library(io SHARED
   ../src/hook_utils.c
   ../src/hook_compiler.c
   ../src/hook_error.c
-  hook_io.c
   ../src/hook_iterable.c
   ../src/hook_iterator.c
   ../src/hook_memory.c
@@ -70,7 +70,8 @@ add_library(io SHARED
   ../src/hook_value.c
   ../src/hook_vm.c)
 
-add_library(strings SHARED
+add_library(numbers SHARED
+  hook_numbers.c
   ../src/hook_array.c
   ../src/hook_builtin.c
   ../src/hook_callable.c
@@ -84,15 +85,34 @@ add_library(strings SHARED
   ../src/hook_range.c
   ../src/hook_string_map.c
   ../src/hook_string.c
+  ../src/hook_struct.c
+  ../src/hook_userdata.c
+  ../src/hook_value.c
+  ../src/hook_vm.c)
+
+add_library(strings SHARED
   hook_strings.c
+  ../src/hook_array.c
+  ../src/hook_builtin.c
+  ../src/hook_callable.c
+  ../src/hook_chunk.c
+  ../src/hook_utils.c
+  ../src/hook_error.c
+  ../src/hook_iterable.c
+  ../src/hook_iterator.c
+  ../src/hook_memory.c
+  ../src/hook_module.c
+  ../src/hook_range.c
+  ../src/hook_string_map.c
+  ../src/hook_string.c
   ../src/hook_struct.c
   ../src/hook_userdata.c
   ../src/hook_value.c
   ../src/hook_vm.c)
 
 add_library(arrays SHARED
-  ../src/hook_array.c
   hook_arrays.c
+  ../src/hook_array.c
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
