--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,8 +7,12 @@ endif()
 if(MSVC)
   find_package(unofficial-sqlite3 CONFIG REQUIRED)
   find_package(CURL CONFIG REQUIRED)
-  find_package(hiredis CONFIG REQUIRED)
   find_package(libmysql REQUIRED)
+endif()
+
+if (MSVC)
+  include_directories("C:/Program Files (x86)/hiredis/include")
+  link_directories("C:/Program Files (x86)/hiredis/lib")
 endif()
 
 if(APPLE)
@@ -165,11 +169,11 @@ add_library(mysql SHARED
 if(MSVC)
   target_link_libraries(sqlite PRIVATE unofficial::sqlite3::sqlite3)
   target_link_libraries(url PRIVATE CURL::libcurl)
-  target_link_libraries(redis PRIVATE hiredis::hiredis)
   target_link_libraries(mysql PRIVATE ${MYSQL_LIBRARIES})
 else()
   target_link_libraries(sqlite sqlite3)
   target_link_libraries(url curl)
-  target_link_libraries(redis hiredis)
   target_link_libraries(mysql mysqlclient)
 endif()
+
+target_link_libraries(redis hiredis)
