--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,7 @@ jobs:
       run: |
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
+        git checkout 96c35a683eed6695172ebe30d752654d9c0658e6
         bootstrap-vcpkg.bat
         vcpkg integrate install
         vcpkg install sqlite3:x64-windows
