--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Installing dependencies
       run: |
-        brew install mysql-connector-c
+        brew install mysql-client
         git clone https://github.com/redis/hiredis.git
         cd hiredis
         git fetch --all --tags
