removed extensions building from GitHub workflow scripts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,21 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
-      run: |
-        sudo apt-get update -y
-        sudo apt-get install -y libcurl4-openssl-dev
-        sudo apt-get install -y libmysqlclient-dev
-        git clone https://github.com/redis/hiredis.git
-        cd hiredis
-        git fetch --all --tags
-        git checkout tags/v1.0.2
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
-        cmake --build build
-        sudo cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build
@@ -38,30 +26,14 @@ jobs:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: ${{ github.workspace }}/package/*.tar.gz
         overwrite: true
-    - name: Cleaning
-      run: |
-        rm -fr bin
-        rm -fr build
-        rm -fr lib
-        rm -fr package
 
   macos-release:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
-      run: |
-        brew install mysql-connector-c
-        git clone https://github.com/redis/hiredis.git
-        cd hiredis
-        git fetch --all --tags
-        git checkout tags/v1.0.2
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
-        cmake --build build
-        sudo cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build
@@ -74,37 +46,14 @@ jobs:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: ${{ github.workspace }}/package/*.tar.gz
         overwrite: true
-    - name: Cleaning
-      run: |
-        rm -fr bin
-        rm -fr build
-        rm -fr lib
-        rm -fr package
 
   windows-release:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
-      run: |
-        git clone https://github.com/Microsoft/vcpkg.git
-        cd vcpkg
-        git checkout 96c35a683eed6695172ebe30d752654d9c0658e6
-        bootstrap-vcpkg.bat
-        vcpkg integrate install
-        vcpkg install curl:x64-windows
-        vcpkg install libmysql:x64-windows
-        cd ..
-        git clone https://github.com/redis/hiredis.git
-        cd hiredis
-        git fetch --all --tags
-        git checkout tags/v1.0.2
-        cmake -B build
-        cmake --build build --config Release
-        cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build --config Release
@@ -117,9 +66,3 @@ jobs:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: ${{ github.workspace }}/package/*.tar.gz
         overwrite: true
-    - name: Cleaning
-      run: |
-        Remove-Item bin -Recurse
-        Remove-Item build -Recurse
-        Remove-Item lib -Recurse
-        Remove-Item package -Recurse
