--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,18 @@ set(CPACK_SOURCE_IGNORE_FILES "${cpack_ignore}")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 
-install(DIRECTORY bin/ DESTINATION bin)
+if(MSVC)
+  set(EXECUTABLE "${PROJECT_NAME}.exe")
+else()
+  set(EXECUTABLE ${PROJECT_NAME})
+endif()
+
+install(
+  FILES "bin/${EXECUTABLE}"
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+  DESTINATION bin
+)
+
 install(DIRECTORY examples/ DESTINATION examples)
 install(DIRECTORY lib/ DESTINATION lib)
 install(FILES ${CPACK_RESOURCE_FILE_README} ${CPACK_RESOURCE_FILE_LICENSE}
