--- a/.github/workflows/release-extensions.yml
+++ b/.github/workflows/release-extensions.yml
@@ -1,5 +1,12 @@
 name: Build for release and upload assets with extensions
 
+on:
+  push:
+    branches: [ main ]
+
+  pull_request:
+    branches: [ main ]
+
 jobs:
 
   ubuntu-release:
@@ -18,6 +25,14 @@ jobs:
         cmake -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
         sudo cmake --install build
+        git clone https://github.com/FastCGI-Archives/fcgi2.git
+        cd fcgi2
+        git fetch --all --tags
+        git checkout tags/2.4.2
+        ./autogen.sh
+        ./configure
+        make
+        sudo make install
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
@@ -40,7 +55,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Installing dependencies
       run: |
-        brew install mysql-connector-c
         git clone https://github.com/redis/hiredis.git
         cd hiredis
         git fetch --all --tags
@@ -48,6 +62,8 @@ jobs:
         cmake -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
         sudo cmake --install build
+        brew reinstall fcgi
+        brew install mysql-client
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
@@ -76,6 +92,7 @@ jobs:
         bootstrap-vcpkg.bat
         vcpkg integrate install
         vcpkg install curl:x64-windows
+        vcpkg install fastcgi:x64-windows
         vcpkg install libmysql:x64-windows
         cd ..
         git clone https://github.com/redis/hiredis.git
