--- a/.github/workflows/release-extensions.yml
+++ b/.github/workflows/release-extensions.yml
@@ -1,11 +1,9 @@
-name: Build for release and upload assets with extensions
+name: Build for release with extensions
 
 on:
-  push:
-    branches: [ main ]
-
-  pull_request:
-    branches: [ main ]
+  release:
+    types:
+      - created
 
 jobs:
 
@@ -13,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
+    - name: Installing dependencies (APT packages)
       run: |
         sudo apt-get update -y
         sudo apt-get install -y libcurl4-openssl-dev
         sudo apt-get install -y libmysqlclient-dev
+    - name: Installing dependency hiredis
+      run: |
         git clone https://github.com/redis/hiredis.git
         cd hiredis
         git fetch --all --tags
@@ -25,10 +25,11 @@ jobs:
         cmake -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
         sudo cmake --install build
+    - name: Installing dependency fcgi2
+      run: |
         git clone https://github.com/FastCGI-Archives/fcgi2.git
         cd fcgi2
-        git fetch --all --tags
-        git checkout tags/2.4.2
+        libtoolize && aclocal && automake --add-missing && autoconf
         ./autogen.sh
         ./configure
         make
@@ -42,18 +43,16 @@ jobs:
     - name: Packing
       run: |
         cpack --config build/CPackConfig.cmake
-    - name: Upload asset
-      uses: shogo82148/actions-upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{ github.workspace }}/package/*.tar.gz
-        overwrite: true
 
   macos-release:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
+    - name: Installing dependencies (Homebrew packages)
+      run: |
+        brew reinstall fcgi
+        brew install mysql-client
+    - name: Installing dependency hiredis
       run: |
         git clone https://github.com/redis/hiredis.git
         cd hiredis
@@ -62,8 +61,6 @@ jobs:
         cmake -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
         sudo cmake --install build
-        brew reinstall fcgi
-        brew install mysql-client
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
@@ -73,28 +70,25 @@ jobs:
     - name: Packing
       run: |
         cpack --config build/CPackConfig.cmake
-    - name: Upload asset
-      uses: shogo82148/actions-upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{ github.workspace }}/package/*.tar.gz
-        overwrite: true
 
   windows-release:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Installing dependencies
+    - name: Installing tool vcpkg
       run: |
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         git checkout 96c35a683eed6695172ebe30d752654d9c0658e6
         bootstrap-vcpkg.bat
         vcpkg integrate install
+    - name: Installing dependencies (vcpkg packages)
+      run: |
         vcpkg install curl:x64-windows
         vcpkg install fastcgi:x64-windows
         vcpkg install libmysql:x64-windows
-        cd ..
+    - name: Installing dependency hiredis
+      run: |
         git clone https://github.com/redis/hiredis.git
         cd hiredis
         git fetch --all --tags
@@ -104,16 +98,10 @@ jobs:
         cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_EXTENSIONS=On
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build --config Release
     - name: Packing
       run: |
         cpack --config build/CPackConfig.cmake
-    - name: Upload asset
-      uses: shogo82148/actions-upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{ github.workspace }}/package/*.tar.gz
-        overwrite: true
