--- a/.github/workflows/release-extensions.yml
+++ b/.github/workflows/release-extensions.yml
@@ -1,9 +1,10 @@
 name: Build for release with extensions
 
-on:
-  release:
-    types:
-      - created
+# Disabled for now
+#on:
+#  release:
+#    types:
+#      - created
 
 jobs:
 
