moved disabled GitHub Workflows

--- a/disabled-workflows/build-extensions.yml
+++ b/disabled-workflows/build-extensions.yml
@@ -1,12 +1,11 @@
 name: Build and test with extensions
 
-# Disabled for now
-#on:
-#  push:
-#    branches: [ main ]
-#
-#  pull_request:
-#    branches: [ main ]
+on:
+  push:
+    branches: [ main ]
+
+  pull_request:
+    branches: [ main ]
 
 jobs:
 
