--- a/disabled-workflows/build-extensions.yml
+++ b/disabled-workflows/build-extensions.yml
@@ -45,7 +45,7 @@ jobs:
         cmake --build ${{ github.workspace }}/build
     - name: Running tests
       run: |
-        ./run-tests.sh
+        ${{ github.workspace }}/scripts/test.sh
       env:
         HOOK_HOME: ${{ github.workspace }}
     - name: Code coverage
@@ -81,7 +81,7 @@ jobs:
         cmake --build ${{ github.workspace }}/build
     - name: Running tests
       run: |
-        ./run-tests.sh
+        ${{ github.workspace }}/scripts/test.sh
       env:
         HOOK_HOME: ${{ github.workspace }}
 
@@ -119,6 +119,6 @@ jobs:
         cmake --build ${{ github.workspace }}/build --config Debug
     - name: Running tests
       run: |
-        ${{ github.workspace }}/run-tests.bat
+        ${{ github.workspace }}/scripts/test.bat
       env:
         HOOK_HOME: ${{ github.workspace }}
