--- a/disabled-workflows/build-extensions.yml
+++ b/disabled-workflows/build-extensions.yml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   ubuntu-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Installing dependencies (APT packages)
