--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Debug
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build
+    - name: Configure CMake and build
+      run: ${{ github.workspace }}/scripts/build.sh
     - name: Running tests
       run: |
         ${{ github.workspace }}/scripts/test.sh
@@ -35,12 +31,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Debug
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build
+    - name: Configure CMake and build
+      run: ${{ github.workspace }}/scripts/build.sh
     - name: Running tests
       run: |
         ${{ github.workspace }}/scripts/test.sh
@@ -53,12 +45,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build --config Debug
+    - name: Configure CMake and build
+      run: ${{ github.workspace }}/scripts/build.bat
     - name: Running tests
       run: |
         ${{ github.workspace }}/scripts/test.bat
