--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,15 +11,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build
-    - name: Packing
-      run: |
-        cpack --config build/CPackConfig.cmake
+    - name: Configure CMake and build for release
+      run: ${{ github.workspace }}/scripts/pack.sh
     - name: Upload asset
       uses: shogo82148/actions-upload-release-asset@v1
       with:
@@ -31,15 +24,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build
-    - name: Packing
-      run: |
-        cpack --config build/CPackConfig.cmake
+    - name: Configure CMake and build for release
+      run: ${{ github.workspace }}/scripts/pack.sh
     - name: Upload asset
       uses: shogo82148/actions-upload-release-asset@v1
       with:
@@ -53,15 +39,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
-    - name: Configure CMake
-      run: |
-        cmake -B ${{ github.workspace }}/build
-    - name: Build
-      run: |
-        cmake --build ${{ github.workspace }}/build --config Release
-    - name: Packing
-      run: |
-        cpack --config build/CPackConfig.cmake
+    - name: Configure CMake and build for release
+      run: ${{ github.workspace }}/scripts/pack.bat
     - name: Upload asset
       uses: shogo82148/actions-upload-release-asset@v1
       with:
