--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -129,3 +129,23 @@ add_library(arrays_mod SHARED
   ../src/hk_userdata.c
   ../src/hk_value.c
   ../src/hk_vm.c)
+
+add_library(utf8_mod SHARED
+  hk_utf8.c
+  ../src/hk_array.c
+  ../src/hk_builtin.c
+  ../src/hk_callable.c
+  ../src/hk_chunk.c
+  ../src/hk_utils.c
+  ../src/hk_error.c
+  ../src/hk_iterable.c
+  ../src/hk_iterator.c
+  ../src/hk_memory.c
+  ../src/hk_module.c
+  ../src/hk_range.c
+  ../src/hk_string_map.c
+  ../src/hk_string.c
+  ../src/hk_struct.c
+  ../src/hk_userdata.c
+  ../src/hk_value.c
+  ../src/hk_vm.c)
