--- a/disabled-workflows/release-with-extensions.yml
+++ b/disabled-workflows/release-with-extensions.yml
@@ -37,7 +37,7 @@ jobs:
         sudo make install
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build
@@ -65,7 +65,7 @@ jobs:
         sudo cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_EXTENSIONS
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build
@@ -101,7 +101,7 @@ jobs:
         cmake --install build
     - name: Configure CMake
       run: |
-        cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_EXTENSIONS=On
+        cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DBUILD_EXTENSIONS
     - name: Build
       run: |
         cmake --build ${{ github.workspace }}/build --config Release
