added socket core module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,10 @@ add_executable(${PROJECT_NAME}
   src/hk_value.c
   src/hk_vm.c)
 
+if(WIN32)
+  target_link_libraries(${PROJECT_NAME} ws2_32)
+endif()
+
 if(NOT MSVC)
   target_link_libraries(${PROJECT_NAME} m)
   target_link_libraries(${PROJECT_NAME} dl)
