--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -217,3 +217,23 @@ add_library(encoding_mod SHARED
   ../src/hk_userdata.c
   ../src/hk_value.c
   ../src/hk_vm.c)
+
+add_library(socket_mod SHARED
+  hk_socket.c
+  ../src/hk_array.c
+  ../src/hk_builtin.c
+  ../src/hk_callable.c
+  ../src/hk_chunk.c
+  ../src/hk_utils.c
+  ../src/hk_error.c
+  ../src/hk_iterable.c
+  ../src/hk_iterator.c
+  ../src/hk_memory.c
+  ../src/hk_module.c
+  ../src/hk_range.c
+  ../src/hk_string_map.c
+  ../src/hk_string.c
+  ../src/hk_struct.c
+  ../src/hk_userdata.c
+  ../src/hk_value.c
+  ../src/hk_vm.c)
